--- a/css/toggle_menu.css
+++ b/css/toggle_menu.css
@@ -10,7 +10,6 @@
     margin: 0 auto 0 auto;
     max-width: 80em;
     padding: 0em 10em;
-    z-index: 1;
 }
 
 .toggleMenu-container {
